# mcr

./: .gitattributes  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  deny.toml
.cargo/: mutants.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
benches/: concrete_vs_generic.rs  footprint.rs  geometry.rs  largeboard.rs  movegen.rs  perft.rs  variants.rs
bindings/c/: Cargo.toml  README.md  build_test.sh  cbindgen.toml  test.c
bindings/c/include/: mce.h  mcr.h
bindings/c/src/: lib.rs
bindings/python/: Cargo.toml  README.md  pyproject.toml
bindings/python/src/: lib.rs
bindings/python/tests/: test_mce.py  test_mcr.py
bindings/wasm/: Cargo.toml  README.md
bindings/wasm/src/: lib.rs
bindings/wasm/tests/: smoke.rs
bindings/wasm/www/: index.html  main.js
cli/: Cargo.toml
cli/src/: main.rs  util.rs
cli/src/commands/: convert.rs  fairy.rs  inspect.rs  mod.rs  perft.rs  play.rs  validate.rs
cli/tests/: fairy.rs
compare/: Cargo.toml  README.md
compare-fairy/: Cargo.toml  README.md
compare-fairy/examples/: dump_moves.rs  sp.rs
compare-fairy/src/: asean.rs  ataxx.rs  atomar.rs  berolina.rs  bughouse.rs  cambodian.rs  cannonshogi.rs  capablanca.rs  capahouse.rs  chak.rs  chaturanga.rs  chennis.rs  chessgi.rs  codrus.rs  coregal.rs  corpus.rs  courier.rs  difffuzz.rs  dobutsu.rs  dragon.rs  duck.rs  empire.rs  extinction.rs  fivecheck.rs  fogofwar.rs  gardner.rs  georgian.rs  giveaway.rs  gorogoro.rs  grand.rs  grandhouse.rs  grasshopper.rs  hachu.rs  hoppelpoppel.rs  janggi.rs  jieqi.rs  khans.rs  kinglet.rs  knightmate.rs  koedem.rs  (+57 more)
compare/benches/: perft_compare.rs
compare/data/: perftsuite.epd
compare/src/: alloc.rs  chess960.rs  epd.rs  footprint.rs  gen.rs  lib.rs  main.rs  micro.rs  prng.rs  rss.rs  runtime.rs  stats.rs
docs/: ci-fsf.md  fairy-variants-architecture.md  oracle-less-validation.md  perf-concrete-vs-generic.md  perf-per-variant-sizing.md  perf-regression.md  perf-role-array-spike.md  perf-variants.md  variants.md
docs/rules/: 5check.json  README.md  ai-wok.json  alice.json  almost.json  amazon.json  antichess.json  asean.json  atomar.json  atomic.json  berolina.json  bughouse.json  cambodian.json  cannonshogi.json  capablanca.json  capahouse.json  caparandom.json  centaur.json  chak.json  chancellor.json  chaturanga.json  checkshogi.json  chennis.json  chess960.json  chessgi.json  chigorin.json  chu.json  codrus.json  coregal.json  courier.json  crazyhouse.json  dai.json  dobutsu.json  dragon.json  duck.json  embassy.json  empire.json  euroshogi.json  extinction.json  fogofwar.json  (+81 more)
docs/variants/: 5check.md  README.md  ai-wok.md  alice.md  almost.md  amazon.md  antichess.md  asean.md  atomar.md  atomic.md  berolina.md  bughouse.md  cambodian.md  cannonshogi.md  capablanca.md  capahouse.md  caparandom.md  centaur.md  chak.md  chancellor.md  chaturanga.md  checkshogi.md  chennis.md  chess960.md  chessgi.md  chigorin.md  chu.md  codrus.md  coregal.md  courier.md  crazyhouse.md  dai.md  dobutsu.md  dragon.md  duck.md  embassy.md  empire.md  euroshogi.md  extinction.md  fogofwar.md  (+80 more)
examples/: fen_inspect.rs  perft.rs  random_game.rs  uci_demo.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: any_wide_from_str.rs  fen_roundtrip.rs  movegen_play.rs  san_roundtrip.rs  uci_parse.rs  wide_fen_roundtrip.rs  wide_movegen_play.rs  wide_uci_parse.rs
src/: ataxx.rs  attacks.rs  bitboard.rs  board.rs  book.rs  catalog.rs  chess_move.rs  color.rs  epd.rs  file.rs  game.rs  lib.rs  magic.rs  movelist.rs  outcome.rs  pgn.rs  piece.rs  position.rs  rank.rs  san.rs  serde_impls.rs  square.rs  staged.rs  zobrist.rs
src/geometry/: analysis.rs  any.rs  attacks.rs  backing.rs  binary.rs  bitboard.rs  board.rs  book.rs  collection.rs  epd.rs  game.rs  mod.rs  notation.rs  notation_tests.rs  position.rs  role.rs  rules.rs  square.rs  status.rs  variant.rs  wide_move.rs  zobrist.rs
src/geometry/variants/: aiwok.rs  alice.rs  almost.rs  amazon.rs  asean.rs  atomar.rs  berolina.rs  bughouse.rs  cambodian.rs  cannonshogi.rs  capablanca.rs  capahouse.rs  caparandom.rs  centaur.rs  chak.rs  chancellor.rs  chaturanga.rs  checkshogi.rs  chennis.rs  chessgi.rs  chigorin.rs  chu.rs  codrus.rs  coregal.rs  courier.rs  dai.rs  dobutsu.rs  dragon.rs  duck.rs  embassy.rs  empire.rs  euroshogi.rs  extinction.rs  fivecheck.rs  fogofwar.rs  gardner.rs  georgian.rs  giveaway.rs  gorogoro.rs  gothic.rs  (+71 more)
src/variant/: antichess.rs  any.rs  atomic.rs  chess.rs  chess960.rs  crazyhouse.rs  horde.rs  koth.rs  mod.rs  racing.rs  rules.rs  three_check.rs
tests/: alice_rules.rs  analysis_api.rs  attackers_consistency.rs  binary.rs  concrete_variant_rules.rs  conformance_concrete_generic.rs  coverage_gate.rs  epd_suite.rs  epd_suite_corpus.epd  invariants.proptest-regressions  invariants.rs  make_unmake.rs  notation_roundtrip.rs  perft.rs  perft_5check.rs  perft_aiwok.rs  perft_alice.rs  perft_almost.rs  perft_amazon.rs  perft_antichess.rs  perft_asean.rs  perft_ataxx.rs  perft_atomar.rs  perft_atomic.rs  perft_berolina.rs  perft_bughouse.rs  perft_cambodian.rs  perft_cannonshogi.rs  perft_capablanca.rs  perft_capahouse.rs  perft_caparandom.rs  perft_castling_random.rs  perft_centaur.rs  perft_chak.rs  perft_chancellor.rs  perft_chaturanga.rs  perft_checkshogi.rs  perft_chennis.rs  perft_chess960.rs  perft_chessgi.rs  (+112 more)
