# mce — Modular Chess Engine
#
# A permissively licensed (MIT OR Apache-2.0), clean-room chess move-generation
# and rules library covering standard chess, Chess960, and the major variants.
# It is an original implementation built from public algorithms — it does not
# derive from any copyleft engine.

[package]
name = "mce"
description = "Modular Chess Engine — a permissively licensed chess move-generation and rules library covering standard chess and variants."
version = "0.0.0"
# In active development — not yet released. `publish = false` guards against an
# accidental `cargo publish` while the API is still in flux.
publish = false
edition = "2021"
rust-version = "1.83"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ywzvennu/mce"
homepage = "https://github.com/ywzvennu/mce"
readme = "README.md"
keywords = ["chess", "chess960", "move-generation", "variants", "bitboard"]
categories = ["games", "game-development"]
authors = ["MCE contributors"]
exclude = ["/fuzz", "/.github"]

[lints.rust]
unsafe_code = "deny"
missing_debug_implementations = "warn"
unreachable_pub = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }

[lints.clippy]
all = { level = "warn", priority = -1 }
todo = "warn"
dbg_macro = "warn"

[features]
# Off by default. When on, `bishop_attacks`/`rook_attacks` use magic-bitboard
# lookups (faster on slider-heavy positions, ~841 KiB attack table found at
# first use) instead of the lean hyperbola-quintessence tables (~73 KiB). The
# public API is unchanged either way.
magic = []

# Off by default. Enables [`book::Book::open`], the filesystem convenience that
# reads a Polyglot `.bin` book from a path via `std::fs`. The in-memory
# [`book::Book::from_bytes`] reader and the Polyglot key need no feature; this
# only gates the file-reading entry point.
book = []

# Off by default. When on, the public value types gain `serde::Serialize` /
# `serde::Deserialize` impls. Small enums and scalars serialize structurally;
# `Position` and `Board` serialize as their FEN strings (compact, stable, and
# free of the private hash/layout), and `AnyVariant` as a `{ variant, fen }`
# pair. With the feature off, serde is absent from the dependency graph
# entirely (`cargo tree -e normal` shows none).
serde = ["dep:serde"]

[dependencies]
# Optional, behind the `serde` feature. `default-features = false` keeps it
# `no_std`-friendly; `alloc` is enabled for the `String`/`Vec` representations
# (FEN strings, pockets) used by the hand-written impls.
serde = { version = "1", optional = true, default-features = false, features = [
    "alloc",
    "derive",
] }

[dev-dependencies]
criterion = "0.8"
proptest = "1"
# Exercises the round-trips in the feature-gated serde tests.
serde_json = "1"

[[bench]]
name = "movegen"
harness = false

[[bench]]
name = "perft"
harness = false

[[bench]]
name = "variants"
harness = false

[profile.release]
lto = "thin"
codegen-units = 1
