# mcr — a clean-room chess rules library
#
# A permissively licensed (MIT OR Apache-2.0), clean-room chess move-generation
# and rules library covering standard chess, Chess960, and the major variants.
# It is an original implementation built from public algorithms — it does not
# derive from any copyleft engine.

[package]
name = "mcr"
description = "Clean-room, permissively licensed (MIT OR Apache-2.0) chess move-generation and rules library covering standard chess, Chess960, and 60+ fairy variants (Shogi, Xiangqi, Makruk, Capablanca, Chu Shogi, and more) validated against Fairy-Stockfish. Rules and move generation only — no search or evaluation."
version = "0.0.0"
# In development — unversioned and unpublished. `0.0.0` + `publish = false` guard
# against an accidental `cargo publish`; a real version is assigned only when the
# API is deliberately frozen for a first release.
publish = false
edition = "2021"
rust-version = "1.83"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ywzvennu/mcr"
homepage = "https://github.com/ywzvennu/mcr"
documentation = "https://docs.rs/mcr"
readme = "README.md"
keywords = ["chess", "shogi", "xiangqi", "variants", "perft"]
categories = ["game-development", "games", "no-std"]
authors = ["MCR contributors"]
# The published package is the library crate only: src/, README, LICENSEs,
# CHANGELOG, and the architecture docs. The GPL-fenced and non-published sibling
# crates each live behind their own Cargo.toml, so Cargo already drops them from
# the package; they are also named here so the boundary is explicit and survives
# any future restructuring. Never ship: compare-fairy / compare (link or drive
# GPL engines), fuzz, the bindings/cli crates, CI config, or LLM scratch files.
exclude = [
    "/.github",
    "/compare",
    "/compare-fairy",
    "/fuzz",
    "/cli",
    "/bindings",
]

[lints.rust]
unsafe_code = "deny"
missing_debug_implementations = "warn"
unreachable_pub = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }

[lints.clippy]
all = { level = "warn", priority = -1 }
todo = "warn"
dbg_macro = "warn"

[features]
# On by default. Opts the crate back into the standard library. With it off
# (`--no-default-features`) the crate is `#![no_std]` and draws its owned
# containers from `alloc`: the core geometry, rules, and move generation — the
# whole default movegen path (hyperbola-quintessence sliders) — build without
# `std`. Turning `std` off withdraws the `std::error::Error` impls (the
# `Display` impls remain), the filesystem book loader, and the magic table; see
# the `book` and `magic` features below, which require `std`.
default = ["std"]
std = []

# Off by default; requires `std`. When on, `bishop_attacks`/`rook_attacks` use
# magic-bitboard lookups (faster on slider-heavy positions, ~841 KiB attack
# table found at first use) instead of the lean hyperbola-quintessence tables
# (~73 KiB). The public API is unchanged either way. The table is searched and
# packed at first use through a `std::sync::LazyLock` once-cell, so this path is
# `std`-only; the default `no_std` build uses the const-table hyperbola sliders.
magic = ["std"]

# Off by default; requires `std`. Enables [`book::Book::open`], the filesystem
# convenience that reads a Polyglot `.bin` book from a path via `std::fs`. The
# in-memory [`book::Book::from_bytes`] reader and the Polyglot key are `no_std`
# and need no feature; this only gates the file-reading entry point.
book = ["std"]

# Off by default; requires `std`. When on, exposes the `perft_parallel` /
# `perft_variant_parallel` node counters, which split the depth-1 root moves
# across a rayon thread pool and compute each subtree serially. Intended for
# benchmarking and tooling, not the core hot path — the result is
# byte-identical to the serial `perft` / `perft_variant`. With the feature off,
# rayon is absent from the dependency graph entirely (`cargo tree -e normal`
# shows none).
parallel = ["std", "dep:rayon"]

# Off by default. When on, the public value types gain `serde::Serialize` /
# `serde::Deserialize` impls. Small enums and scalars serialize structurally;
# `Position` and `Board` serialize as their FEN strings (compact, stable, and
# free of the private hash/layout), and `AnyVariant` as a `{ variant, fen }`
# pair. With the feature off, serde is absent from the dependency graph
# entirely (`cargo tree -e normal` shows none).
serde = ["dep:serde"]

[dependencies]
# Optional, behind the `serde` feature. `default-features = false` keeps it
# `no_std`-friendly; `alloc` is enabled for the `String`/`Vec` representations
# (FEN strings, pockets) used by the hand-written impls.
serde = { version = "1", optional = true, default-features = false, features = [
    "alloc",
    "derive",
] }

# Optional, behind the `parallel` feature. Drives the root-level work splitting
# in `perft_parallel` / `perft_variant_parallel`. Absent from the default
# dependency graph (`cargo tree -e normal` shows none with the feature off).
rayon = { version = "1", optional = true }

[dev-dependencies]
criterion = "0.8"
proptest = "1"
# Exercises the round-trips in the feature-gated serde tests.
serde_json = "1"

# A thin UCI-ish adapter that drives the library over stdin/stdout — the mirror
# image of the `compare-fairy` harness (which speaks UCI *to* Fairy-Stockfish).
# It is a pure CONSUMER of the public API and adds nothing to the library's
# dependency graph or rules. `doc = false` keeps it out of the rustdoc surface;
# its inline unit tests still run under `cargo test`.
[[bin]]
name = "mcr-uci"
path = "src/bin/mcr-uci.rs"
doc = false
bench = false

[[bench]]
name = "movegen"
harness = false

[[bench]]
name = "perft"
harness = false

[[bench]]
name = "variants"
harness = false

[[bench]]
name = "geometry"
harness = false

[[bench]]
name = "largeboard"
harness = false

[[bench]]
name = "footprint"
harness = false

[[bench]]
name = "concrete_vs_generic"
harness = false

[profile.release]
lto = "thin"
codegen-units = 1
