# mcr compare-fairy — perft comparison harness driving Fairy-Stockfish.
#
# This is a SEPARATE, nested crate. It is NOT part of the published `mcr`
# library, the workspace, or the parent crate's normal `cargo build` / `cargo
# test`; it depends on `mcr` by path only.
#
# GPL FENCE (hard requirement): Fairy-Stockfish (FSF) is GPL-3.0-or-later. This
# harness DOES NOT link, copy, read, or otherwise incorporate any FSF source or
# binary. It drives an externally provided `fairy-stockfish` UCI binary purely
# AS A SUBPROCESS over a process boundary (spawn, write UCI commands to stdin,
# read node counts from stdout). No GPL code links into anything; the FSF binary
# is never committed or distributed by this repository. `mcr` itself does not
# depend on FSF (not even as a dev-dependency). This crate is `publish = false`.

[package]
name = "mcr-compare-fairy"
version = "0.0.0"
edition = "2021"
publish = false
# Apache-2.0 OR MIT: this crate contains only original mcr-side code; it links
# NO GPL code (it only spawns the FSF binary as a subprocess). The licensing of
# the FSF binary it drives is FSF's own and does not propagate across the
# process boundary.
license = "MIT OR Apache-2.0"

[dependencies]
# `default-features = false` plus explicit `std` keeps the harness on the full
# std build (it spawns subprocesses and does FEN string surgery) while leaving
# the `magic` slider feature togglable independently of `default`.
mcr = { path = "..", default-features = false, features = ["std"] }

[features]
# Forward to the mcr dependency's `magic` feature so the same harness can
# measure magic-on vs magic-off sliders:
#   cargo run --release --features magic
magic = ["mcr/magic"]

# Enables the mcr side of the HaChu large-shogi perft comparison (issue #379's
# `--hachu` mode). OFF by default: mcr does not yet implement a Chu-Shogi
# variant/move generator (only the 12x12 board geometry), so there is nothing to
# cross-check against the HaChu oracle. Issue #380 adds Chu-Shogi rules and will
# flip this on (and, at that point, wire it to the mcr feature that gates the
# variant, e.g. `large-shogi = ["mcr/chu"]`). Until then it is a harness-local
# switch that only selects the perft-comparison code path in `hachu.rs`.
large-shogi = []

[[bin]]
name = "compare-fairy"
path = "src/main.rs"
# `test = true` so the in-crate unit tests (FEN-dialect reconciliation, divide
# parsing) run under `cargo test`. They are pure and do not spawn FSF.
doc = false
bench = false

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
