# mce-compare — perft benchmark comparing mce against shakmaty.
#
# This is a separate, nested crate. It is NOT part of the published `mce`
# library, the workspace, or the parent crate's normal `cargo build`/`cargo
# test`; it depends on `mce` by path.
#
# LICENSING ISOLATION (hard requirement): this crate links `shakmaty`, which
# is GPL-3.0+, for BENCHMARKING ONLY. It is `publish = false` and is never
# published or distributed, so it imposes no copyleft obligation on the `mce`
# library, which remains clean-room MIT OR Apache-2.0. The `mce` crate itself
# does not depend on shakmaty (not even as a dev-dependency).

[package]
name = "mce-compare"
version = "0.0.0"
edition = "2021"
publish = false
license = "GPL-3.0-or-later"

[features]
# Forward to the mce dependency's `magic` feature so the same benchmark binary
# can measure magic-on vs magic-off sliders. Run the magic build with:
#   cargo run --release --features magic --bin mce-compare
magic = ["mce/magic"]

[dependencies]
# `default-features = false` plus an explicit `std` keeps the benchmark on the
# full std build (it links the std-only `shakmaty`) while still letting the
# `magic` feature above toggle the slider backend independently of `default`.
mce = { path = "..", default-features = false, features = ["std"] }
shakmaty = { version = "0.27", features = ["variant"] }

[dev-dependencies]
criterion = "0.5"

[[bin]]
name = "mce-compare"
path = "src/main.rs"
test = false
doc = false
bench = false

# Differential fuzzing harness (issue #109): seeded mce-vs-shakmaty cross-check
# of legal moves / perft / check+terminal status / FEN round-trip over random
# positions. Run with: cargo run --release --bin difftest [-- --full]
[[bin]]
name = "difftest"
path = "src/bin/difftest.rs"
test = false
doc = false
bench = false

[[bench]]
name = "perft_compare"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
