# mcr-fuzz — fuzz targets for the mcr chess rules library.
#
# This is a separate, nested cargo-fuzz crate. It is NOT part of the published
# `mcr` library, the workspace, or the normal `cargo build`/`cargo test` of the
# parent crate; it depends on `mcr` by path. Fuzzing requires a nightly
# toolchain and the `cargo-fuzz` subcommand:
#
#     cargo install cargo-fuzz
#     cargo +nightly fuzz build           # build all targets
#     cargo +nightly fuzz run fen_roundtrip
#
# Corpora and crash artifacts (fuzz/corpus, fuzz/artifacts, fuzz/target) are
# gitignored and must never be committed.

[package]
name = "mcr-fuzz"
version = "0.0.0"
edition = "2021"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }

[dependencies.mcr]
path = ".."

# Keep release-ish optimization for fuzzing throughput while preserving
# overflow checks and debug assertions so invariant violations surface.
[profile.release]
debug = 1
debug-assertions = true
overflow-checks = true

[[bin]]
name = "fen_roundtrip"
path = "fuzz_targets/fen_roundtrip.rs"
test = false
doc = false
bench = false

[[bin]]
name = "uci_parse"
path = "fuzz_targets/uci_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "movegen_play"
path = "fuzz_targets/movegen_play.rs"
test = false
doc = false
bench = false

[[bin]]
name = "san_roundtrip"
path = "fuzz_targets/san_roundtrip.rs"
test = false
doc = false
bench = false

[[bin]]
name = "wide_fen_roundtrip"
path = "fuzz_targets/wide_fen_roundtrip.rs"
test = false
doc = false
bench = false

[[bin]]
name = "wide_uci_parse"
path = "fuzz_targets/wide_uci_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "wide_movegen_play"
path = "fuzz_targets/wide_movegen_play.rs"
test = false
doc = false
bench = false

[[bin]]
name = "any_wide_from_str"
path = "fuzz_targets/any_wide_from_str.rs"
test = false
doc = false
bench = false
